# posol

./: .gitignore  README.md
contracts/: README.md  hardhat.config.ts  package.json
contracts/contracts/: Greeter.sol  PoSol.sol
contracts/contracts/mock/: Domain.sol  KZG.sol  Sanity.sol  Transcript.sol
contracts/contracts/test/: BalanceSumVerifier.sol  Domain.sol  KZGChecker.sol
contracts/scripts/: deploy.ts
contracts/test/: kzg.ts  sanity.ts  transcript.ts
core/: Cargo.toml
core/src/: commitment.rs  lib.rs  tag.rs  util.rs
core/src/balance_sum/: linear_poly.rs  mod.rs  proof.rs  quotient_poly.rs  transcript.rs
docs/: Full Implementation of Proof of Solvency for CEX based on Customized IOP.md  基于自定义IOP的交易所偿付能力证明方案PoC.md
